# outlook-mcp

./: README.md  pyproject.toml
outlook_exporter/: __init__.py  cli.py  db.py  export.py  folders.py  utils.py
outlook_mcp_server/backend/: audit.py  batch_operations.py  email_composition.py
outlook_mcp_server/tools/: batch_operations.py  email_operations.py
